--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- שינוי הנתיב ל-main.js כדי שיעבוד אחרי build -->
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
