--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- נתיב יחסי כדי ש-Vite יחליף אותו אוטומטית בבילד -->
-    <script type="module" src="src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
